--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "mongodb": "^6.15.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0"
   },
